Tweak intro animation.

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -25,7 +25,7 @@
   </script>
 </head>
 
-<body>
+<body class="loading">
   <!--<h1>GitHub Auth Demo:</h1>
   <p><a href="#" id="login">Authenticate</a></p>
   <p id="output"></p>-->
