Hide testimonials on mobile.

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>GitHub Authentication Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!--- This example uses jQuery: -->
   <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 
