--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Blue Collar Development">
   <meta property="og:url" content="https://www.bluecollardev.com">
-  <meta property="og:title" content="Blue Collar Dev - Local Software and App Development in Victoria and Vancouver, BC">
-  <meta property="og:description" content="Blue Collar Development is a boutique software development house located in Victoria, BC. Specializing in mobile (iOS/Android), hybrid and web app development, Blue Collar creates amazing applications using cutting edge technology to help you bring your concept to life.">
-  <meta name="keywords" content="blue collar, boutique software, software development, hybrid app development, mobile app development, website development, local developers, IT consulting, vancouver, victoria, vancouver island, british columbia">
-  <meta name="description" content="Blue Collar Development is a boutique software development house located in Victoria, BC. Specializing in mobile (iOS/Android), hybrid and web app development, Blue Collar creates amazing applications using cutting edge technology to help you bring your concept to life.">
+  <meta property="og:title" content="Blue Collar Dev - Local Software and App Development in Bangkok, Thailand">
+  <meta property="og:description" content="Blue Collar Development is a boutique software development house located in Bangkok, Thailand. Specializing in mobile (iOS/Android), hybrid and web app development, Blue Collar creates amazing applications using cutting edge technology to help you bring your concept to life.">
+  <meta name="keywords" content="blue collar, boutique software, software development, hybrid app development, mobile app development, website development, local developers, IT consulting, bangkok, thailand">
+  <meta name="description" content="Blue Collar Development is a boutique software development house located in Bangkok, Thailand. Specializing in mobile (iOS/Android), hybrid and web app development, Blue Collar creates amazing applications using cutting edge technology to help you bring your concept to life.">
 
   <link rel="canonical" href="https://www.bluecollardev.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
 
-  <title>Blue Collar Dev - Local Software and App Development in Victoria and Vancouver, BC</title>
+  <title>Blue Collar Dev - Local Software and App Development in Bangkok, Thailand</title>
 </head>
 <body>
   <div id="app"></div>
